[package]
name = "json-outer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
serde_json = "1.0.96"
tokio = { version = "1", features = [
    "io-util",
    "io-std",
    "process",
    "rt",
    "macros",
] }

[profile.release]
strip = true
